--- a/sistem_desp/desp/templates/desp/services/listar_servicos.html
+++ b/sistem_desp/desp/templates/desp/services/listar_servicos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seus Serviços - Despachante</title>
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,13 +25,13 @@
     
     <header class="app-header p-3 mb-4 shadow">
         <div class="container-fluid d-flex justify-content-between align-items-center">
-            <h1 class="h4 mb-0">Olá, Despachante {{ nome_despachante }}</h1> 
+            <h1 class="h4 mb-0">Olá, Despachante {{ nome_despachante }}!</h1> 
             <nav>
                 <div class="d-flex gap-2">
                     <a href="{% url 'servicos' %}" class="nav-link-custom bg-primary fw-bold">Serviços</a>
-                    <a href="" class="nav-link-custom">Chamados</a>
-                    <a href="" class="nav-link-custom">Agendamentos</a>
-                    <a href="" class="nav-link-custom">Seu Perfil</a>
+                    <a href="{% url 'chamados' %}" class="nav-link-custom">Chamados</a>
+                    <a href="{% url 'agendamentos' %}" class="nav-link-custom">Agendamentos</a>
+                    <a href="{% url 'perfil' %}" class="nav-link-custom">Seu Perfil</a>
                 </div>
             </nav>
         </div>
@@ -65,23 +65,28 @@
                 {% if servicos %}
                     {% for servico in servicos %}
                         <div class="card service-item-card p-3 d-flex flex-row justify-content-between align-items-center">
-                            <span class="fs-5 fw-medium text-dark">{{ servico.nome }}</span>
+                            <a href="{% url 'visualizar_servico' servico.pk %}" class="fs-5 fw-medium text-dark text-decoration-none hover:text-primary">
+                                {{ servico.nome }}
+                            </a>
                             
                             <div class="actions d-flex gap-2">
                                 
-                                <form method="POST" action="{% url 'editar_servicos' %}">
+                                <form method="POST" action="{% url 'editar_servico' %}">
                                     {% csrf_token %}
                                     <input type="hidden" name="id_servico" value="{{ servico.pk }}">
                                     <button class="btn btn-sm btn-primary" type="submit" title="Editar Serviço">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16"><path d="M15.502 12.164a1 1 0 0 1 .158-.135L14.73 11a1 1 0 0 1-.16.14l-1.393 1.393a1 1 0 0 1-.135.158l-1.392 1.393a.5.5 0 0 0 .158.135l1.393 1.393a1 1 0 0 0 .158.16l1.393 1.392a.5.5 0 0 0 .135-.158l.158-.135zM12 2.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16"><path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/></svg>                                    
                                     </button>
                                 </form>
                                 
-                                <form method="POST" action="" onsubmit="return confirm('Tem certeza que deseja excluir o serviço {{ servico.nome }}?');">
+                                <form method="POST" action="{% url 'deletar_servico' %}" onsubmit="return confirm('Tem certeza que deseja excluir o serviço {{ servico.nome }}?');">
                                     {% csrf_token %}
                                     <input type="hidden" name="id_servico" value="{{ servico.pk }}">
                                     <button class="btn btn-sm btn-danger" type="submit" title="Excluir Serviço">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16"><path d="M2.5 1a1 1 0 0 0-1 1v.5A1.5 1.5 0 0 0 1 4v.5a.5.5 0 0 0 .5.5h.5v9a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-9h.5a.5.5 0 0 0 .5-.5V4a1.5 1.5 0 0 0-1.5-1.5H13a1 1 0 0 0-1-1zm3.5 1.5v9h1V2.5zm4 0v9h1V2.5z"/></svg>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                        </svg>                                    
                                     </button>
                                 </form>
                             </div>
@@ -96,6 +101,6 @@
         </section>
     </main>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
